--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Conditions</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <h1>Exercises for JS conditions</h1>
@@ -26,6 +27,7 @@
       <button type="submit">Compare words</button>
     </form>
     <div id="display-smaller-alphabet"></div>
+
     <script src="main.js"></script>
   </body>
 </html>
