change background colour

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
       <button type="submit">Submit</button>
     </form>
     <div id="display-age-confirmation"></div>
+
+    <form>
+      <label for="animal-input">Guess my favourite animal</label>
+      <input type="text" id="animal-input" placeholder="Enter an animal" />
+      <button type="submit">Guess</button>
+    </form>
     <script src="main.js"></script>
   </body>
 </html>
