--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
     </form>
     <div id="display-age-confirmation"></div>
 
-    <form>
+    <form onsubmit="guessAnimal();return false">
       <label for="animal-input">Guess my favourite animal</label>
       <input type="text" id="animal-input" placeholder="Enter an animal" />
       <button type="submit">Guess</button>
     </form>
+    <div id="display-guess-result"></div>
+
     <script src="main.js"></script>
   </body>
 </html>
