function for multiple of 5

--- a/index.html
+++ b/index.html
@@ -180,6 +180,15 @@
       <div id="display-language-response"></div>
     </div>
 
+    <div class="exercise-wrap">
+      <form onsubmit="dividedBy5();return false">
+        <label for="number-input">Can it get divided by 5?</label>
+        <input type="number" min="0" placeholder="number" id="number-input" />
+        <button type="submit">Submit</button>
+      </form>
+      <div id="display-dividing-response"></div>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
