function for confirm()

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Exercises for JS conditions</h1>
     <div class="exercise-wrap">
-      <div id="greeting-user">Hello, welcome to my exercises!</div>
+      <div id="response-1">Hello, welcome to my exercises!</div>
     </div>
 
     <div class="exercise-wrap">
@@ -30,7 +30,7 @@
 
         <button type="submit">Compare</button>
       </form>
-      <div id="display-smaller-alphabet"></div>
+      <div id="response-2"></div>
     </div>
 
     <div class="exercise-wrap">
@@ -46,7 +46,7 @@
         />
         <button type="submit">Submit</button>
       </form>
-      <div id="display-age-confirmation"></div>
+      <div id="response-3"></div>
     </div>
 
     <div class="exercise-wrap">
@@ -60,7 +60,7 @@
         />
         <button type="submit">Guess</button>
       </form>
-      <div id="display-guess-result"></div>
+      <div id="response-4"></div>
     </div>
 
     <div class="exercise-wrap">
@@ -90,7 +90,7 @@
           onclick="colorComment(this.value)"
         />
         <label for="green">Green</label>
-        <div id="display-color-comment"></div>
+        <div id="response-5"></div>
       </form>
     </div>
 
@@ -107,7 +107,7 @@
         />
         <button type="submit">Submit</button>
       </form>
-      <div id="display-test-comment"></div>
+      <div id="response-6"></div>
     </div>
 
     <div class="exercise-wrap">
@@ -138,7 +138,7 @@
         />
         <label for="cloudy">Cloudy</label>
       </form>
-      <div id="display-activities-suggestion"></div>
+      <div id="response-7"></div>
     </div>
 
     <div class="exercise-wrap">
@@ -177,7 +177,7 @@
         />
         <label for="japanese">Japanese</label>
       </form>
-      <div id="display-language-response"></div>
+      <div id="response-8"></div>
     </div>
 
     <div class="exercise-wrap">
@@ -186,7 +186,12 @@
         <input type="number" min="0" placeholder="number" id="number-input" />
         <button type="submit">Submit</button>
       </form>
-      <div id="display-dividing-response"></div>
+      <div id="response-9"></div>
+    </div>
+
+    <div class="exercise-wrap">
+      <button onclick="goOut()">Ask my cat.</button>
+      <div id="response-10"></div>
     </div>
 
     <script src="main.js"></script>
