--- a/index.html
+++ b/index.html
@@ -280,6 +280,12 @@
       </form>
       <div id="response-14"></div>
     </div>
+
+    <div class="exercise-wrap">
+      <h3>15. Beslutstagande</h3>
+      <button onclick="areYouCat()">Initiation</button>
+      <div id="response-15"></div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
