--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
       <h3>12. Största av tre ord</h3>
       <form onsubmit="compareThreeWords();return false">
         <label for="word-1">Enter three different words</label>
-        <input type="text" id="word-1" required />
-        <input type="text" id="word-2" required />
-        <input type="text" id="word-3" required />
+        <input type="text" id="word-1" required class="block-input" />
+        <input type="text" id="word-2" required class="block-input" />
+        <input type="text" id="word-3" required class="block-input" />
         <button type="submit">Submit</button>
       </form>
       <div id="response-12"></div>
